--- a/css/styles.css
+++ b/css/styles.css
@@ -177,6 +177,8 @@ img {
   color: var(--title-color-text);
   text-decoration: none;
   letter-spacing: 0.02em;
+  padding-top: 24px;
+  padding-bottom: 24px;
 }
 
 .header-nav-link:hover,
@@ -195,6 +197,8 @@ img {
   text-decoration: none;
   font-style: normal;
   letter-spacing: 0.02em;
+  padding-top: 24px;
+  padding-bottom: 24px;
 }
 .nav-address-link:hover,
 .nav-address-link:focus {
@@ -228,7 +232,6 @@ img {
   letter-spacing: 0.02em;
   color: var(--color-title-write);
   margin-bottom: 48px;
-  
 }
 .hero-item {
   padding: 188px 0;
